@@ -1,3 +1,3 @@
 #!/usr/bin/env sh
 
-/usr/bin/java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xmx256m -Xss512k -XX:MetaspaceSize=100m -jar /apps/app.jar
+java -XX:+UseG1GC -Xms256m -Xmx512m -jar /apps/app.jar
